added folder pages for html failes

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -16,8 +16,8 @@
         <div id="app" class="app">
             <header class="header">TEMPLATE</header>
             <main id="main" class="main">
-                <!-- <h1>Webpack</h1>
-                <h2>Webpack</h2> -->
+                <h1>Webpack</h1>
+                <h2>Webpack</h2>
             </main>
             <h3>Webpack</h3>
             <button @click="component = !component">Show vue component</button>
